--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
+    "import-path": "^1.0.15",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
@@ -27,7 +28,8 @@
     "multer": "^1.4.4",
     "npm": "^8.5.5",
     "passport": "^0.5.2",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
